--- a/Code/pages/css/style.css
+++ b/Code/pages/css/style.css
@@ -1,13 +1,38 @@
+html {
+  min-height: 100%;  
+}
+
 body {
   padding-top: 50px;
   padding-bottom: 40px;
   background-color: #eee;
+  margin-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
 }
 .starter-template {
   padding: 40px 15px;
   text-align: center;
 }
 
+body > .container {
+  padding: 60px 15px 0;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.container .text-muted {
+  margin: 20px 0;
+}
 /*
 Code utile pour le login et l'inscription
 */
