--- a/Code/views/search.ejs
+++ b/Code/views/search.ejs
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="François Duchêne">
-  <title>BeerSearch - Rechercher</title>
+  <title>BeerSearch - Recherche</title>
   <link href="css/bootstrap.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
 </head>
