generalisation format ejs pour pages HTML
J'ai restructuré les pages. Elles ont maintenant toutes un format **ejs**.
Certaines parties qui reviennent souvent, comme :
* head - les balises metas + style
* nav - une partie de la barre de naviguation
* footer - le footer de chaque page ou presque
* scripts - les scripts qui doivent presque tout le temps être chargé
sont mises dans des fichiers séparés et inclus directement dans toutes les pages par ejs.
J'ai aussi renommé le dossier *pages* en *views* et supprimé l'ancien dossier *views*.

--- a/Code/views/pages/Commander.ejs
+++ b/Code/views/pages/Commander.ejs
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <% include ../parties/head %>
         <meta name="author" content="François Duchêne">
         <title>BeerSearch - Commander</title>
-        <link href="css/bootstrap.css" rel="stylesheet" />
-        <link href="css/style.css" rel="stylesheet"/>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="./index.html">BeerSearch</a>
-            </div>
+            <% include ../parties/nav %>
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
                 <li><a href="./RechercheBieres.html">Recherche bière</a></li>
@@ -156,12 +145,8 @@
           <h3 id="comm"></h3>
         </section>
         <footer class="footer">
-          <div class="container">
-            <p class="text-muted">Site créé dans le cadre du cours LSINF1212</p>
-          </div>
+          <% include ../parties/footer %>
         </footer>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-        <script src="js/bootstrap.js"></script>
+        <% include ../parties/scripts %>
     </body>
 </html>
