--- a/Code/views/pages/SignIn.ejs
+++ b/Code/views/pages/SignIn.ejs
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <% include ../parties/head %>
         <meta name="author" content="François Duchêne">
         <title>BeerSearch - Inscription</title>
-        <link href="css/bootstrap.css" rel="stylesheet" />
-        <link href="css/style.css" rel="stylesheet"/>
     </head>
     <body>
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="./index.html">BeerSearch</a>
-          </div>
+          <% include ../parties/nav %>
         </div>
       </nav>
       <div class="container">
@@ -58,5 +47,6 @@
 
         </form>
       </div> <!-- /container -->
+      <% include ../parties/scripts %>
     </body>
 </html>
