--- a/Code/views/pages/Commander.ejs
+++ b/Code/views/pages/Commander.ejs
@@ -17,7 +17,7 @@
                 <li><a href="./contact.html">Contact</a></li>
               </ul>
               <% if(isLog) { %>
-                <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./Profile.html'">Profil</button>
+                <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./Profile.html'">Bonjour <%=nom%></button>
                 <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./deconnexion.html'">Se déconnecter</button>
               <% }else{ %>
                 <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./Login.html'">Se connecter</button>
