--- a/Code/views/pages/Profil.ejs
+++ b/Code/views/pages/Profil.ejs
@@ -14,10 +14,10 @@
             <% include ../parties/nav %>
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                <li><a href="./RechercheBieres.html">Recherche bière</a></li>
-                <li><a href="./PDV.html">Points de ventes</a></li>
-                <li><a href="./Commander.html">Commander une bière</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="/RechercheBieres.html">Recherche bière</a></li>
+                <li><a href="/PDV.html">Points de ventes</a></li>
+                <li><a href="/Commander.html">Commander une bière</a></li>
+                <li><a href="/contact.html">Contact</a></li>
               </ul>
             </div><!--/.nav-collapse -->
           </div>
@@ -28,11 +28,11 @@
               <div class="col-sm-3 col-md-2 sidebar">
                 <ul class="nav nav-sidebar">
                   <li class="active"><a href="#">Aperçu <span class="sr-only">(current)</span></a></li>
-                  <li><a href="#">Outils d'administration</a></li>
+                  <li><a href="/outilAdmin.html">Outils d'administration</a></li>
                   <li><a href="#">Historique</a></li>
                 </ul>
                 <ul class="nav nav-sidebar">
-                  <li><a href="">Se déconnecter</a></li>
+                  <li><a href="/deconnexion.html">Se déconnecter</a></li>
                   <li><a href="">Supprimer son compte</a></li>
                 </ul>
               </div>
