--- a/Code/views/pages/contact.ejs
+++ b/Code/views/pages/contact.ejs
@@ -21,7 +21,7 @@
               <li class="active"><a href="#">Contact</a></li>
             </ul>
             <% if(isLog) { %>
-              <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./Profile.html'">Profil</button>
+              <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./Profile.html'">Bonjour <%=nom%></button>
               <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./deconnexion.html'">Se déconnecter</button>
             <% }else{ %>
               <button type="button" class="btn btn-default navbar-btn" onclick="location.href='./Login.html'">Se connecter</button>
