--- a/Code/views/pages/Login.ejs
+++ b/Code/views/pages/Login.ejs
@@ -24,6 +24,7 @@
             </label>
           </div>
           <button class="btn btn-lg btn-primary btn-block" type="submit">Se connecter</button>
+          <button type="button" class="btn btn-lg btn-primary btn-block" onclick="location.href='./SignIn.html'">S'inscrire</button>
         </form>
       </div> <!-- /container -->
       <% include ../parties/scripts %>
