--- a/Code/views/pages/search.ejs
+++ b/Code/views/pages/search.ejs
@@ -38,7 +38,10 @@
     <% Bieres.forEach(function(biere){ %>
       <li class="listBie">
         Nom: <%= biere.Bières %> - Degré d'alcool: <%= biere.Degree %> - Type: <%= biere.Type %>
-        <a id="lienCom" href='Commander.html?name=<%= biere.Bières %>'>Commander</a>
+        <% if(isLog){ %>
+          <a id="lienCom" href='Commander.html?id=<%= biere.id %>'>Commander</a>
+        <% } %>
+
       </li>
     <% }) %>
     </ul>
