modification de la page commander

--- a/Code/views/pages/Commander.ejs
+++ b/Code/views/pages/Commander.ejs
@@ -34,124 +34,46 @@
           </div>
         </header>
         <% if(!isLog){ %>
-          <h3>
+          <h3 class="text-center">
             Pour utiliser cette fonction vous devez être
             <a id="lienConnexion" href='Login.html'>connecté</a>
           </h3>
         <% }else{ %>
-          <table class="table table-striped table-hover">
-            <tr>
-              <th> Bière </th>
-              <th> Caractéristiques </th>
-              <th> Points de vente </th>
-              <th> Prix </th>
-              <th> Commander </th>
-            </tr>
-            <tr>
-              <td> Chimey Bleue </td>
-              <td>
-                 brune, 9 %, laisse un leger goût de caramel en bouche
-              </td>
-              <td> Au moine fou </td>
-              <td>3€</td>
-              <td>
-                <label for="type">Nombre de bouteilles </label>
-                <select name="type" id="type">
-                  <option value="0">0</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  <option value="6">6</option>
-                  <option value="7">7</option>
-                  <option value="8">8</option>
-                  <option value="9">9</option>
-                  <option value="10">10</option>
-                </select>
-              </td>
-            </tr>
-            <tr>
-              <td> Chimey Bleue </td>
-              <td>
-                 brune, 9 %, laisse un leger goût de caramel en bouche
-              </td>
-              <td> Jamais 203 </td>
-              <td>2,5€</td>
-              <td>
-                <label for="type">Nombre de bouteilles </label>
-                <select name="type" id="type">
-                  <option value="0">0</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  <option value="6">6</option>
-                  <option value="7">7</option>
-                  <option value="8">8</option>
-                  <option value="9">9</option>
-                  <option value="10">10</option>
-                </select>
-              </td>
-            </tr>
-            <tr>
-              <td> Orval </td>
-              <td>
-                 Ambrée, 6.2 %, amère
-              </td>
-              <td> Beer Bar </td>
-              <td>1,25€</td>
-              <td>
-                <label for="type">Nombre de bouteilles </label>
-                <select name="type" id="type">
-                  <option value="0">0</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  <option value="6">6</option>
-                  <option value="7">7</option>
-                  <option value="8">8</option>
-                  <option value="9">9</option>
-                  <option value="10">10</option>
-                </select>
-              </td>
-            </tr>
-            <tr>
-              <td> Orange Pied'boeuf </td>
-              <td>
-                  blonde, 1,2 %, classique
-              </td>
-              <td> Chez Lagaffe </td>
-              <td>1,75€</td>
-              <td>
-                <label for="type">Nombre de bouteilles </label>
-                <select name="type" id="type">
-                  <option value="0">0</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  <option value="6">6</option>
-                  <option value="7">7</option>
-                  <option value="8">8</option>
-                  <option value="9">9</option>
-                  <option value="10">10</option>
-                </select>
-              </td>
-            </tr>
-          </table>
+          <div class="container">
+            <table class="table table-striped table-hover table-bordered">
+              <tr>
+                <th> Bière </th>
+                <th> Caractéristiques </th>
+                <th> Points de vente </th>
+                <th> Prix </th>
+                <th> Commander </th>
+              </tr>
+              <% for(var i=0; i<4; i++) {%>
+                <ul>
+                  <tr>
+                    <td> Chimey Bleue <%= i %></td>
+                    <td>
+                       brune, 9 %, laisse un leger goût de caramel en bouche
+                    </td>
+                    <td> Au moine fou </td>
+                    <td>3€</td>
+                    <td>
+                      <label for="type">Nombre de bouteilles : </label>
+                      <input type="number" id="inputNbBiere" name="nombreBiere" placeholder="Nombre de Bouteilles" required>
+                    </td>
+                  </tr>
+                </ul>
+              <%}%>
+            </table>
 
-          <div class="comm">
             <script>
               function commandeEff() {
                 document.getElementById("comm").innerHTML = "Commande envoyée !!";
               }
             </script>
-          <button type="button" class="btn btn-default navbar-btn" onclick="commandeEff()" >Commander</button>
+            <a role="button" class="btn btn-primary btn-block" href="./RechercheBieres.html">Ajouter une bière</a>
+            <button type="button" class="btn btn-default btn-block" onclick="commandeEff()" >Commander</button>
+
           </div>
         <% } %>
         <section class="container">
